github.user.styl
/* ==UserStyle==
@name         Dark-GitHub
@namespace    github.com/vednoc/dark-github
@description  Dark and light, very customizable theme for GitHub.
@author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
@homepageURL  https://github.com/vednoc/dark-github
@supportURL   https://github.com/vednoc/dark-github/issues
@updateURL    https://github.com/vednoc/dark-github/raw/main/github.user.styl
@version      0.20.0
@license      MIT
@preprocessor stylus

@var checkbox cg_debug     'Color generator debug' 0
@var select   cg_theme     'Base color-scheme toggle' {
    'Custom colors   *': 'custom',
    'Dark blue (old)  ': 'old-colors',
    'Dark gray (new)  ': 'new-colors',
    'GitHub Dark      ': 'github-dark',
    'Breeze Dark      ': 'breeze-dark',
}
@var color    cg_bg        'Base background color' #1f232a
@var color    cg_fg        'Base foreground color' #eeeeee
@var color    cg_ac        'Base accent color    ' #7289da

@var range    cg_bg_a      'Adjust background color tones' [0, -25, 25, 0.1, '%']
@var range    cg_fg_a      'Adjust foreground color tones' [0, -25, 25, 0.1, '%']
@var range    cg_ac_a      'Adjust accent color tones    ' [0,   0, 25,   1, '%']
@var range    cg_sc_a      'Adjust syntax color tones    ' [0, -25, 25, 0.1, '%']

@var text     f_ui         'UI font' ''font_name''
@var text     f_mono       'Monospace font' ''font_name''
@var text     b_hgwd       'Checkbox width/height' '1rem'

@var checkbox custom_font   'Use custom font overrides' 1
@var checkbox navbar_sticky 'Use sticky position for the navbar' 0
@var checkbox latest_commit 'Use neutral colors in latest commit' 1
@var checkbox readme_header 'Use old readme header design' 0
@var checkbox short_headers 'Use shorter headers' 0
@var checkbox gitako_shrink 'Fix hidden navigation caused by shrink feature in Gitako' 0
@var checkbox code_borders  'Add borders around code blocks and similar elements' 1

@var color    _red         'Base red color              ' #f07178
@var color    _orange      'Base orange color           ' #f78c6c
@var color    _yellow      'Base yellow color           ' #ffcb6b
@var color    _green       'Base green color            ' #aede62
@var color    _cyan        'Base cyan color             ' #89ddff
@var color    _blue        'Base blue color             ' #82aaff
@var color    _magenta     'Base magenta color          ' #9a91ea
@var color    _violet      'Base violet color           ' #c792ea
@var color    _gray        'Gray color                  ' #bbbbbb
@var color    _white       'White color                 ' #ffffff
@var color    _sh          'Shadow color                ' #00000025
==/UserStyle== */

// Color mixin.
/// All colors: `c: fg bd bg`
/// Only border-color: `c: 0 bd`
c(x, y = 0, z = 0, xi = 1, yi = 1, zi = 1) {
    if x != 0 && x != '_' {            color: xi is 0 ? x : x i }
    if y != 0 && y != '_' {     border-color: yi is 0 ? y : y i }
    if z != 0 && z != '_' { background-color: zi is 0 ? z : z i }
}

// SVG colors.
g(x, y = 0, xi = 1, yi = 1) {
    if x != 0 && x != '_' {   fill: xi is 0 ? x : x i }
    if y != 0 && y != '_' { stroke: yi is 0 ? y : y i }
}

// Pseudo-element builder.
P(a, _z = 0, _c = '', _p = absolute) {
    z-index:  _z;
    content:  _c;
    position: _p;
    if a[0] is a 'call' or a[0] is a 'unit' {    top: a[0] }
    if a[1] is a 'call' or a[1] is a 'unit' {  right: a[1] }
    if a[2] is a 'call' or a[2] is a 'unit' { bottom: a[2] }
    if a[3] is a 'call' or a[3] is a 'unit' {   left: a[3] }
}

// Bare RGB mixin.
/// Converts HEX to bare rrr-ggg-bbb format.
to_rgb(input) {
    unquote(slice(s('%s', rgba(input, 0)), 5, -3))
}

// Raw RGBA mixin.
/// Combine `*-rgb` vars and alpha value.
to_rgba(input, alpha) {
    unquote(s('rgba(var(--%s-rgb), %s)', unquote(input), alpha))
}

// Border radius mixin.
r() { border-radius: arguments }

// Box-shadow mixin.
b() { box-shadow: arguments }

/// Remove old browser prefixes.
vendors = official

to_hsla(input) {
    $h = {}
    $h.hue = unquote(split('deg', '%s' % ceil(hue(input), 2))[0])
    $h.saturation = ceil(saturation(input), 2)
    $h.lightness = ceil(lightness(input), 2)
    s('hsla(%s,%s,%s,1)', $h.hue, $h.saturation, $h.lightness)
}

// Generator -> Color-schemes.
ColorSchemes = {
    'custom':      { BG:   cg_bg, FG:   cg_fg, AC:   cg_ac }
    'old-colors':  { BG: #1f232a, FG: #eeeeee, AC: #7289da }
    'new-colors':  { BG: #292929, FG: #e6e6e6, AC: #d47d3f }
    'github-dark': { BG: #181818, FG: #e6e6e6, AC: #4f8cc9 }
    'breeze-dark': { BG: #232629, FG: #eff0f1, AC: #3daee9 }
}

// Generator -> Active color-scheme.
for selected in ColorSchemes {
    if (selected == cg_theme) {
        // main { dbg: s('%s %s', selected, cg_theme) }
        define('BG', ColorSchemes[selected].BG, global)
        define('FG', ColorSchemes[selected].FG, global)
        define('AC', ColorSchemes[selected].AC, global)
    }
}
/* ... */

